# verfume

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: README.md  kstar_EFIT01_35582_010000.esy_headerMod.geqdsk  sample_simple.geqdsk
mesh_gui_project/: __init__.py
mesh_gui_project/core/: __init__.py  application_state.py  critical_points.py  equilibrium.py  exporter.py  field_line_tracer.py  flux_surface.py  magnetic_field.py  (+8 more)
tests/: test_application_state.py  test_boundary_constraints.py  test_contour_collection_manager.py  test_critical_points.py  test_data_inspector_panel.py  test_equilibrium.py  test_equilibrium_visualization_controller.py  test_error_handler.py  test_event_handler_coordinator.py  test_exporter.py  test_field_line_tracer.py  test_file_operations_handler.py  test_fine_mesh_sizes.py  test_flux_surface.py  test_geqdsk_parser.py  test_interpolation.py  test_logging_setup.py  test_magnetic_field.py  test_main.py  test_main_window.py  test_mesh_boundary_selector.py  test_mesh_edit_handler.py  test_mesh_editing_integration.py  test_mesh_editing_tab.py  test_mesh_editor.py  test_mesh_generation_workflow.py  test_mesh_optimizer.py  test_mesh_quality.py  test_mesh_size_performance.py  test_mesher.py  test_mouse_interaction_coordinator.py  test_new_mesher.py  test_project_structure.py  test_property_delegation.py  test_psi_bounds_checking_regression.py  test_psi_contours_persist.py  test_psi_critical_points_handler.py  test_psi_edit_gui.py  test_psi_edit_handler.py  test_psi_level_computer.py  (+17 more)
(+30 files in other folders)
